# pytest

./: CMakeLists.txt  Mycodec.hpp  Query_DRAMbase.cpp  Query_NVMbase.cpp  Query_NVMbaseCache.cpp  Query_PipePref.cpp  Query_PipePrefCache.cpp  Query_PipeSkip.cpp  Query_PipeVari.cpp  Query_Pipebase.cpp  block_codecs.hpp  compile_commands.json  fangencode.hpp  testMem.hpp
test/test_data/: ANDresult.txt  AOL_rand100and.txt  Gov2and.txt  Gov2maxscore.txt  MAXSCOREresult.txt  ORresult.txt  WANDresult.txt  test_collectionwand.txt
